# linux_learn

./: CMakeLists.txt  dirtest.cpp  header.h  main.cpp  mutextest.cpp  philosophertest.cpp  pipetest.cpp
